force-app/main/default/objects/DrawingBase__c/DrawingBase__c.object-meta.xml
<CustomObject>
    <label>Drawing Base</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drawings Base</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>