force-app/main/default/objects/DrawingBase__c/fields/CertGroup__c.field-meta.xml
<CustomField>
    <fullName>CertGroup__c</fullName>
    <label>Cert. Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WheelCertificates</valueSetName>
    </valueSet>
</CustomField>