force-app/main/default/objects/DrawingBase__c/fields/DrawingFacet__c.field-meta.xml
<CustomField>
    <fullName>DrawingFacet__c</fullName>
    <label>Drawing Facet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>