force-app/main/default/objects/DrawingBase__c/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <label>Drawing Base ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>