force-app/main/default/objects/DrawingBase__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>DrawingBase__c</referenceTo>
    <relationshipLabel>Drawings Base</relationshipLabel>
    <relationshipName>Drawings_Base</relationshipName>
    <type>Lookup</type>
</CustomField>