force-app/main/default/objects/DrawingBase__c/fields/ParentBaseID__c.field-meta.xml
<CustomField>
    <fullName>ParentBaseID__c</fullName>
    <label>Parent Base ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>