force-app/main/default/objects/DrawingBase__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>WheelProdType__c</referenceTo>
    <relationshipLabel>Drawings Base</relationshipLabel>
    <relationshipName>Drawings_Base</relationshipName>
    <type>Lookup</type>
</CustomField>