force-app/main/default/objects/DrawingBase__c/fields/ProductKind__c.field-meta.xml
<CustomField>
    <fullName>ProductKind__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Kind</label>
    <referenceTo>ProdKind__c</referenceTo>
    <relationshipLabel>Drawings Base</relationshipLabel>
    <relationshipName>Drawings_Base</relationshipName>
    <type>Lookup</type>
</CustomField>