force-app/main/default/objects/DrawingBase__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purpose</label>
    <referenceTo>WheelPurpose__c</referenceTo>
    <relationshipLabel>Drawings Base</relationshipLabel>
    <relationshipName>Drawings_Base</relationshipName>
    <type>Lookup</type>
</CustomField>