force-app/main/default/objects/DrawingBase__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stage</label>
    <referenceTo>KLWDocStage__c</referenceTo>
    <relationshipLabel>Drawings Base</relationshipLabel>
    <relationshipName>Drawings_Base</relationshipName>
    <type>Lookup</type>
</CustomField>