force-app/main/default/objects/DrawingBase__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Name + 
IF(AND(NOT(ISBLANK(Revision__c)), Revision__c &lt;&gt; &apos;0&apos;), &apos; rev.&apos; + Revision__c, &apos;&apos;) + 
IF(AND(NOT(ISBLANK(Version__c)), Version__c &lt;&gt; &apos;0&apos;), &apos; ver.&apos; + Version__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>