force-app/main/default/objects/DrawingBase__c/fields/ValidBefore__c.field-meta.xml
<CustomField>
    <fullName>ValidBefore__c</fullName>
    <label>Valid Before</label>
    <type>Date</type>
</CustomField>