force-app/main/default/objects/DrawingBase__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Ver.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>