force-app/main/default/objects/DrawingBase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ID_ERP__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Parent__c</columns>
    <columns>Stage__c</columns>
    <columns>ProductKind__c</columns>
    <columns>Product__c</columns>
    <columns>WheelProduct__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Revision__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>